syntax = "proto3";

option csharp_namespace = "TDiary.Api.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service EventProto {
  rpc AddEvent (AddEventRequest) returns (AddEventReply);
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply);
}

message AddEventRequest {
  EventData event_data = 2;
}

message AddEventReply {
  string message = 1;
}

message GetEventsRequest {
  google.protobuf.Timestamp last_event_date_utc = 1;
}

message GetEventsReply {
  string message = 1;
  repeated EventData event_data = 2;
}

message EventData {
  string id = 1;
  string entity = 2;
  EventType event_type = 3;
  int32 version = 5;
  string data = 6;
  AuditData audit_data = 7;
}

message AuditData {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp created_at_utc = 2;
  google.protobuf.Timestamp modified_at = 3;
  google.protobuf.Timestamp modified_at_utc = 4;
  string time_zone = 5;
}
enum EventType {
  UNKNOWN = 0;
  INSERT = 1;
  UPDATE = 2;
  DELETE = 3;
  SUMMARY = 4;
}
